# PERF

./: pyproject.toml
notebooks/: Plotting.ipynb
tests/: test_extrapolation.py  test_markov_predictor.py  test_ppm_predictor.py  test_util_cli.py
tidalsim/embeddings/: markov_predictor.py  ppm_predictor.py
tidalsim/modeling/: extrapolation.py  extras.py  run.py  schemas.py
tidalsim/scripts/: goldensim.py  tidalsim.py
tidalsim/util/: cli.py  spike_ckpt.py  spike_log.py
